# vicedtools

./: .gitignore  README.md  setup.cfg  setup.py
docs/: grok.html  index.html  naplan.html  sportstrak.html
docs/acer/: index.html  oars.html  plots.html  results.html
docs/compass/: exports.html  index.html  learningtasks.html  reports.html
docs/gc/: format.html  index.html  upload.html
docs/gwsc/: index.html  reports.html
docs/source/: conf.py  vicedtools.acer.rst  vicedtools.compass.rst  vicedtools.gcp.rst  vicedtools.naplan.rst  vicedtools.rst  vicedtools.scripts.rst  vicedtools.vce.rst  vicedtools.workflows.rst
docs/vce/: gat.html  index.html  studyscores.html
source/: conf.py  index.rst  vicedtools.acer.rst  vicedtools.rst
src/: .gitignore
src/vicedtools/: __init__.py  config-sample.toml  config.py  educationperfect.py  sportstrak.py
src/vicedtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vicedtools/acer/: __init__.py  ewriteresults.py  ewritesittings.py  extraoarsauthenticators.py  oars.py  oarsauthenticators.py  oarscandidates.py  oarssession.py  oarstests.py  patcandidates.py  patitems.py  patresults.py  patsittings.py  pattests.py  plots.py  results.py
src/vicedtools/automation/: __init__.py  compass.py  gcp.py  gcpschema.py
src/vicedtools/compass/: __init__.py  automation.py  compassauthenticators.py  compasssession.py  compasswebdriver.py  exports.py  extraauthenticators.py  reports.py
src/vicedtools/dal/: __init__.py  utilities.py
src/vicedtools/gc/: __init__.py  format.py  imports.py  upload.py
src/vicedtools/gcp/: __init__.py  api.py  format.py  schema.py
src/vicedtools/gwsc/: __init__.py  reports.py
src/vicedtools/naplan/: __init__.py  dataservicesession.py  reports.py  sssrdata.py
src/vicedtools/scripts/: __init__.py  _config.py  compassreportstobq.py  compassstudentdetailstobq.py  compassstudentenrolmenttobq.py  config.py  createcompassattendancesummary.py  createcompassclassescsv.py  createcompassenrolmentscsv.py  createcompassreportssummaries.py  createcompasssubjectsmetadatacsv.py  createnaplansummary.py  createoarsstudentimports.py  createpatparentlettertable.py  createsportstrakxlsx.py  createvcesummaries.py  ewritescorestobq.py  ewritesittingstoscores.py  exportcompassacademicgroups.py  exportcompassattendancehalfday.py  exportcompassclasses.py  exportcompassenrolments.py  exportcompasslearningtask.py  exportcompasslearningtasks.py  exportcompassparentmailmerge.py  exportcompassprogressreport.py  exportcompassprogressreportcycles.py  exportcompassprogressreports.py  exportcompassreport.py  exportcompassreportcycles.py  exportcompasssds.py  (+22 more)
(+57 files in other folders)
