[metadata]
name = vicedtools
version = 0.0.4.1
author = Greg Breese
author_email = gbr@gwsc.vic.edu.au
description = A collection of tools for school data in Victorian schools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gregbreese/vicedtools
project_urls =
    Bug Tracker = https://github.com/gregbreese/vicedtools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    browser_cookie3
    demjson
    google-cloud-bigquery
    google-cloud-storage
    matplotlib
    numpy
    pandas
    seaborn
    selenium

[options.packages.find]
where = src