[metadata]
name = vicedtools
version = 0.0.11.0
author = Greg Breese
description = A collection of tools for school data in Victorian schools.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gregbreese/vicedtools
project_urls =
    Bug Tracker = https://github.com/gregbreese/vicedtools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    browser_cookie3
    bs4
    curl_cffi
    google-cloud-bigquery
    google-cloud-storage
    matplotlib
    numpy
    pandas
    seaborn
    selenium
    seleniumbase
    selenium_stealthS
    tomli
    
[options.packages.find]
where = src